[package]
name = "wifiscanner"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = {version="^0.48.0",features =["Win32_Foundation","Devices_WiFi","Foundation","Foundation_Collections"]}
futures = "0.3.28"